--- a/__painel_admin/css/notificacao.css
+++ b/__painel_admin/css/notificacao.css
@@ -7,12 +7,13 @@
     display: none;
     position: fixed;
     background-color: white;
-    height: 24%;
+    height: 25%;
     width: 24%;
     left: 75%;
     top: 70%;
     border: 1px solid rgba(26, 100, 197, 0.849);
     border-radius: 10px;
+    overflow: hidden;
 }
 
 
@@ -34,7 +35,7 @@
 /*O conteudo*/
 
 .notificacaoCaixa .caixaTexto {
-    height: 82.2%;
+    height: 100%;
     width: 100%;
     background-color: rgba(26, 100, 197, 0.842);
     overflow-wrap: break-word;
