--- a/__painel_admin/css/listar-licenca.css
+++ b/__painel_admin/css/listar-licenca.css
@@ -92,8 +92,8 @@
 /*Estilo das linhas da lista*/
 
 .licencasDados .chaveDados ul li,
-select,
-select option {
+.licencasDados .chaveDados select,
+.licencasDados .chaveDados select option {
     display: inline-block;
     margin-right: 15px;
     padding: 5px;
